--- a/Desafio HTML5/add.html
+++ b/Desafio HTML5/add.html
@@ -41,10 +41,12 @@
                 </fieldset>
 
                 <p><label for="iData">Data de Nascimento: </label><input type="date" name="nData" id="iData" /></p>
+                <p>Foto (CLIQUE NA FOTO PARA INSERIR): <img id="cont-img" src="_img/cont-logo.png"></p>
             </fieldset>
 
             <fieldset id="iAddress">
                 <legend>Endereço</legend>
+                <p><label for="iComp">Empresa: </label><input type="text" name="nComp" id="iComp" size="40" max="50"/></p>
                 <p><label for="iStreet">Logradouro: </label><input type="text" name="nStreet" id="iStreet" size="40" max="80"
                         placeholder="Rua, Avenida, Travessa..." /></p>
                 <p><label for="iNum">Número: </label><input type="number" name="nNum" id="iNum" min="0" max="99999"/></p>
