--- a/Desafio HTML5/fav.html
+++ b/Desafio HTML5/fav.html
@@ -30,9 +30,9 @@
 
             
             <tr id="fRow"><td class="col0"><input class="check" type="checkbox"/><td colspan="2">Nome</td><td class="col2">Sobrenome</td><td class="col3">E-mail</td></tr>
-            <tr class="userRow"><td class="col0"><input class="check" type="checkbox"/></td class="col1"><td class="col4"><img src="_img/star.png" style="background-color: yellow"/></td><td><a href="contact.html">Pessoa 2</a></td><td class="col2">a</td><td class="col3">a</td></tr>
-            <tr class="userRow"><td class="col0"><input class="check" type="checkbox"/></td class="col1"><td class="col4"><img src="_img/star.png" style="background-color: yellow"/></td><td><a href="contact.html">Pessoa 8</a></td><td class="col2">a</td><td class="col3">a</td></tr>
-            <tr class="userRow"><td class="col0"><input class="check" type="checkbox"/></td class="col1"><td class="col4"><img src="_img/star.png" style="background-color: yellow"/></td><td><a href="contact.html">Pessoa 9</a></td><td class="col2">a</td><td class="col3">a</td></tr>
+            <tr class="userRow"><td class="col0"><input class="check" type="checkbox"/></td class="col1"><td class="col4"><input class="star-check" id="star-check11" type="checkbox" checked/><label for="star-check11"><img class="star-img" src="_img/star.png"/></label></td><td><a href="contact.html">Pessoa 2</a></td><td class="col2">a</td><td class="col3">a</td></tr>
+            <tr class="userRow"><td class="col0"><input class="check" type="checkbox"/></td class="col1"><td class="col4"><input class="star-check" id="star-check12" type="checkbox" checked/><label for="star-check12"><img class="star-img" src="_img/star.png"/></label></td><td><a href="contact.html">Pessoa 8</a></td><td class="col2">a</td><td class="col3">a</td></tr>
+            <tr class="userRow"><td class="col0"><input class="check" type="checkbox"/></td class="col1"><td class="col4"><input class="star-check" id="star-check13" type="checkbox" checked/><label for="star-check13"><img class="star-img" src="_img/star.png"/></label></td><td><a href="contact.html">Pessoa 9</a></td><td class="col2">a</td><td class="col3">a</td></tr>
         
         </table>
         <input id="bMore" type="button" value="Mais..."/>
