--- a/Desafio HTML5/add.html
+++ b/Desafio HTML5/add.html
@@ -4,53 +4,63 @@
 <head>
     <meta charset="UTF-8" />
     <title>AGENDAKI</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="_css/style.css" />
     <link rel="stylesheet" type="text/css" href="_css/form.css" />
 </head>
 
 <body>
-<header>
+    <header>
         <h1><a href="index.html">AGENDAKI</a></h1>
-        <form>
-                <p id="pSearch"><label for="iSearch">Pesquisar:</label><input type="text" name="nSearch" id="iSearch" size="50" maxlength="50" placeholder="Digite o nome do contato..."/><button id="buttonSearch" type="submit"><span><i>Procurar</i></span></button></p>
-            </form>
-            
-</header>
-<div>
-    <nav id="org">
+    </header>
+    <div>
+        <nav id="org">
             <h2>Contatos:</h2>
             <ul>
-                <li id="all-list"><a href="index.html">Todos</a></li>
-                <li id="fav-list"><a href="fav.html">Favoritos</a></li>
-                <li id="add-list"><a href="add.html">Adicionar</a></li>
+                <li class="list" id="all-list"><a href="index.html">Todos</a></li>
+                <li class="list" id="fav-list"><a href="fav.html">Favoritos</a></li>
             </ul>
-    </nav>
-    <form method="POST" id="form-add" action="mailto:lucas.tarumoto@forlogic.net" oninput="calctotal()">
+        </nav>
+        <form method="POST" id="form-add" action="mailto:lucas.tarumoto@forlogic.net">
             <fieldset id="iPerson">
                 <legend>Dados Pessoais</legend>
-                <p><label for="iName">Nome: </label><input type="text" name="nNome" id="iNome" size="20"
-                        maxlength="30" placeholder="Nome ..." /></p>
-                        <p><label for="iSurname">Sobrenome: </label><input type="text" name="nSurname" id="iSurname" size="20"
-                            maxlength="30" placeholder="Sobrenome ..." /></p>
-                <p><label for="iEmail">E-mail: </label><input type="email" name="nEmail" id="iEmail" size="20"
-                        maxlength="40" placeholder="Digite o email ..." /></p>
-                <fieldset id="genre">
-                    <legend>Sexo</legend>
+                <p><img id="cont-img" src="_img/cont-logo.png">
+                    <img id="add-img" src="_img/add.png"/>
+                </p>
+                <p><label for="iName">Nome:</label><br />
+                    <input type="text" name="nNome" id="iNome" size="35" maxlength="35" />
+                </p>
+                <p><label for="iSurname">Sobrenome:</label><br />
+                    <input type="text" name="nSurname" id="iSurname" size="35" maxlength="35" />
+                </p>
+                <p>Sexo:<br /><br />
                     <input type="radio" name="nGenre" id="iMale" /><label for="iMale">Masculino</label><br />
-                    <input type="radio" name="nGenre" id="iMale" /><label for="iMale">Feminino</label>
-                </fieldset>
-
-                <p><label for="iData">Data de Nascimento: </label><input type="date" name="nData" id="iData" /></p>
-                <p>Foto (CLIQUE NA FOTO PARA INSERIR): <img id="cont-img" src="_img/cont-logo.png"></p>
+                    <input type="radio" name="nGenre" id="iFemale" /><label for="iFemale">Feminino</label>
+                </p>
+                <p><label for="iData">Data de Nascimento:</label><br />
+                    <input type="date" name="nData" id="iData" />
+                </p>
+                <p><label for="iEmail">E-mail:</label><br />
+                    <input type="email" name="nEmail" id="iEmail" size="35" maxlength="40" />
+                </p>
+                <p><label for="iPhone">Telefone:</label><br />
+                    <input type="text" name="nPhone" id="iPhone" size="35" maxlength="40" />
+                </p>
             </fieldset>
 
             <fieldset id="iAddress">
                 <legend>Endereço</legend>
-                <p><label for="iComp">Empresa: </label><input type="text" name="nComp" id="iComp" size="40" max="50"/></p>
-                <p><label for="iStreet">Logradouro: </label><input type="text" name="nStreet" id="iStreet" size="40" max="80"
-                        placeholder="Rua, Avenida, Travessa..." /></p>
-                <p><label for="iNum">Número: </label><input type="number" name="nNum" id="iNum" min="0" max="99999"/></p>
-                <p><label for="iState">Estado: </label><select name="nState" id="iState">
+                <p><label for="iComp">Empresa: </label><br />
+                    <input type="text" name="nComp" id="iComp" size="35" max="50" />
+                </p>
+                <p><label for="iStreet">Logradouro: </label><br />
+                    <input type="text" name="nStreet" id="iStreet" size="35" max="80" />
+                </p>
+                <p><label for="iNum">Número: </label><br />
+                    <input type="number" name="nNum" id="iNum" min="0" max="99999" />
+                </p>
+                <p><label for="iState">Estado: </label><br />
+                    <select name="nState" id="iState">
                         <optgroup label="Regiao Sul">
                             <option value="SC">Santa Catarina</option>
                             <option value="RS">Rio Grande do Sul</option>
@@ -63,32 +73,35 @@
                             <option value="MG">Minas Gerais</option>
                         </optgroup>
                         <optgroup label="Centro-Oeste">
-                                <option value="GO">Goiás</option>
-                                <option value="MT">Mato Grosso</option>
-                                <option value="MS">Mato Grosso do Sul</option>
+                            <option value="GO">Goiás</option>
+                            <option value="MT">Mato Grosso</option>
+                            <option value="MS">Mato Grosso do Sul</option>
                         </optgroup>
                         <optgroup label="Nordeste">
-                                <option value="CE">Ceará</option>
-                                <option value="AL">Alagoas</option>
-                                <option value="BA">Bahia</option>
-                                <option value="MA">Maranhão</option>
-                                <option value="PI">Piauí</option>
-                                <option value="RN">Rio Grande do Norte</option>
-                                <option value="PB">Paraíba</option>
-                                <option value="PE">Pernambuco</option>
-                                <option value="SE">Sergipe</option>
+                            <option value="CE">Ceará</option>
+                            <option value="AL">Alagoas</option>
+                            <option value="BA">Bahia</option>
+                            <option value="MA">Maranhão</option>
+                            <option value="PI">Piauí</option>
+                            <option value="RN">Rio Grande do Norte</option>
+                            <option value="PB">Paraíba</option>
+                            <option value="PE">Pernambuco</option>
+                            <option value="SE">Sergipe</option>
                         </optgroup>
                         <optgroup label="Norte">
-                                <option value="AM">Amazonas</option>
-                                <option value="AC">Acre</option>
-                                <option value="RO">Rondônia</option>
-                                <option value="RR">Roraima</option>
-                                <option value="AP">Amapá</option>
-                                <option value="PA">Pará</option>
-                                <option value="TO">Tocantins</option>
+                            <option value="AM">Amazonas</option>
+                            <option value="AC">Acre</option>
+                            <option value="RO">Rondônia</option>
+                            <option value="RR">Roraima</option>
+                            <option value="AP">Amapá</option>
+                            <option value="PA">Pará</option>
+                            <option value="TO">Tocantins</option>
                         </optgroup>
-                    </select></p>
-                <p><label for="iCity">Cidade: </label><input type="text" name="nCity" id="iCity" maxlength="40" size="20" placeholder="Cidade ..." list="cidades"/></p>
+                    </select>
+                </p>
+                <p><label for="iCity">Cidade: </label><br />
+                    <input type="text" name="nCity" id="iCity" maxlength="40" size="35" list="cidades" />
+                </p>
                 <datalist id="city">
                     <option value="São Paulo"></option>
                     <option value="Cornélio Procópio"></option>
@@ -97,12 +110,17 @@
             </fieldset>
 
             <fieldset id="iComment">
-                    <legend>Anotações</legend>
-                    <p><label for="iMsg">Comentário: </label><textarea name="nMsg" id="iMsg" cols="35" rows="5" placeholder="Deixe aqui sua mensagem"></textarea></p>
-                </fieldset>
+                <legend>Anotações</legend>
+                <p><label for="iMsg">Comentário: </label><br />
+                    <textarea name="nMsg" id="iMsg" cols="35" rows="5"></textarea>
+                </p>
+            </fieldset>
 
-            <button id="buttonSearch" type="submit"><span><i>Salvar</i></span></button></p>
-</div>
-</body> 
+            <button class="ani-button" type="submit">
+                <span><i>Salvar</i></span>
+            </button>
+        </form>
+    </div>
+</body>
 
 </html>
