--- a/Desafio HTML5/contact.html
+++ b/Desafio HTML5/contact.html
@@ -1,77 +1,88 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AGENDAKI</title>
+        <link rel="stylesheet" type="text/css" href="_css/style.css" />
+        <link rel="stylesheet" type="text/css" href="_css/form.css" />
+        <link rel="stylesheet" type="text/css" href="_css/cont.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-    <title>AGENDAKI</title>
-    <link rel="stylesheet" type="text/css" href="_css/style.css" />
-    <link rel="stylesheet" type="text/css" href="_css/form.css" />
-    <link rel="stylesheet" type="text/css" href="_css/cont.css" />
-</head>
-
-<body>
-<header>
-        <h1><a href="index.html">AGENDAKI</a></h1>
-        <form>
-                <p id="pSearch"><label for="iSearch">Pesquisar:</label><input type="text" name="nSearch" id="iSearch" size="50" maxlength="50" placeholder="Digite o nome do contato..."/><button id="buttonSearch" type="submit"><span><i>Procurar</i></span></button></p>
-            </form>
-            
-</header>
-<div>
-    <nav id="org">
-            <h2>Contatos:</h2>
-            <ul>
-                <li id="all-list"><a href="index.html">Todos</a></li>
-                <li id="fav-list"><a href="fav.html">Favoritos</a></li>
-                <li id="add-list"><a href="add.html">Adicionar</a></li>
-                <li id="rm-list">Deletar</li>
-                <li id="edit-list"><a href="edit.html">Editar</a></li>
-            </ul>
-    </nav>
-    <form method="POST" id="form-add" action="mailto:lucas.tarumoto@forlogic.net" oninput="calctotal()">
-            <fieldset id="iPerson">
-                <legend>Dados Pessoais</legend>
-                <p><label for="iName">Nome: </label><input type="text" name="nNome" id="iNome" size="20"
-                        maxlength="30" value="Pessoa 1" disabled/></p>
-                        <p><label for="iSurname">Sobrenome: </label><input type="text" name="nSurname" id="iSurname" size="20"
-                            maxlength="30" value="Sobrenome 1" disabled/></p>
-                <p><label for="iEmail">E-mail: </label><input type="email" name="nEmail" id="iEmail" size="20"
-                        maxlength="40" value="pessoa1@email.com" disabled/></p>
-                <fieldset id="genre">
-                    <legend>Sexo</legend>
-                    <input type="radio" name="nGenre" id="iMale" checked disabled/><label for="iMale">Masculino</label><br />
-                    <input type="radio" name="nGenre" id="iMale" disabled/><label for="iMale">Feminino</label>
+    <body>
+        <header>
+            <h1><a href="index.html">AGENDAKI</a></h1>
+        </header>
+        <div>
+            <nav id="org">
+                <h2>Contatos:</h2>
+                <ul>
+                    <li class="list" id="all-list"><a href="index.html">Todos</a></li>
+                    <li class="list" id="fav-list"><a href="fav.html">Favoritos</a></li>
+                    <li class="list" id="rm-list">Deletar</li>
+                    <li class="list" id="edit-list"><a href="edit.html">Editar</a></li>
+                </ul>
+            </nav>
+            <form method="POST" id="form-add" action="mailto:lucas.tarumoto@forlogic.net">
+                <fieldset id="iPerson">
+                    <legend>Dados Pessoais</legend>
+                    <p><label for="iName">Nome:</label><br />
+                        <input type="text" name="nNome" id="iNome" size="35" maxlength="35" value="Pessoa 1" 
+                        disabled />
+                    </p>
+                    <p><label for="iSurname">Sobrenome:</label><br />
+                        <input type="text" name="nSurname" id="iSurname" size="35" maxlength="35"
+                         value="Sobrenome 1" disabled />
+                    </p>
+                    <p><label for="iEmail">E-mail:</label><br />
+                        <input type="email" name="nEmail" id="iEmail" size="35" maxlength="40" 
+                        value="pessoa1@email.com" disabled />
+                    </p>
+                    <p>Sexo:<br /><br />
+                        <input type="radio" name="nGenre" id="iMale" checked disabled />
+                        <label for="iMale">Masculino</label><br />
+                        <input type="radio" name="nGenre" id="iFemale" checked />
+                        <label for="iFemale">Feminino</label>
+                    </p>
+                    <p><label for="iData">Data de Nascimento:</label><br />
+                        <input type="date" name="nData" id="iData" value="1996-03-06" disabled />
+                    </p>
+                    <p>Foto:<br />
+                        <img id="cont-img" src="_img/cont-logo.png">
+                    </p>
                 </fieldset>
 
-                <p><label for="iData">Data de Nascimento: </label><input type="date" name="nData" id="iData" value="1996-03-06" disabled/></p>
-                <p>Foto: <img id="cont-img" src="_img/cont-logo.png"></p>
-            </fieldset>
-
-            <fieldset id="iAddress">
-                <legend>Endereço</legend>
-                <p><label for="iComp">Empresa: </label><input type="text" name="nComp" id="iComp" size="40" max="50"
-                    value="Company A" disabled/></p>
-                <p><label for="iStreet">Logradouro: </label><input type="text" name="nStreet" id="iStreet" size="40" max="80"
-                        value="Rua dos Bobos" disabled/></p>
-                <p><label for="iNum">Número: </label><input type="number" name="nNum" id="iNum" min="0" max="99999" value="0" disabled/></p>
-                <p><label for="iState">Estado: </label><select name="nState" id="iState" disabled>
-                        <optgroup label="Regiao Sul">
-                            <option value="SC">Santa Catarina</option>
-                            <option value="RS">Rio Grande do Sul</option>
-                            <option value="PR">Paraná</option>
-                        </optgroup>
-                        <optgroup label="Sudeste">
-                            <option value="SP">São Paulo</option>
-                            <option value="RJ">Rio de Janeiro</option>
-                            <option value="ES">Espírito Santo</option>
-                            <option value="MG">Minas Gerais</option>
-                        </optgroup>
-                        <optgroup label="Centro-Oeste">
+                <fieldset id="iAddress">
+                    <legend>Endereço</legend>
+                    <p><label for="iComp">Empresa:</label><br />
+                        <input type="text" name="nComp" id="iComp" size="35" max="50" value="Company A" disabled />
+                    </p>
+                    <p><label for="iStreet">Logradouro:</label><br />
+                        <input type="text" name="nStreet" id="iStreet" size="35" max="80" value="Rua dos Bobos"
+                         disabled />
+                    </p>
+                    <p><label for="iNum">Número:</label><br />
+                        <input type="number" name="nNum" id="iNum" min="0" max="99999" value="0" disabled />
+                    </p>
+                    <p><label for="iState">Estado:</label><br />
+                        <select name="nState" id="iState" disabled>
+                            <optgroup label="Regiao Sul">
+                                <option value="SC">Santa Catarina</option>
+                                <option value="RS">Rio Grande do Sul</option>
+                                <option value="PR">Paraná</option>
+                            </optgroup>
+                            <optgroup label="Sudeste">
+                                <option value="SP">São Paulo</option>
+                                <option value="RJ">Rio de Janeiro</option>
+                                <option value="ES">Espírito Santo</option>
+                                <option value="MG">Minas Gerais</option>
+                            </optgroup>
+                            <optgroup label="Centro-Oeste">
                                 <option value="GO">Goiás</option>
                                 <option value="MT">Mato Grosso</option>
                                 <option value="MS">Mato Grosso do Sul</option>
-                        </optgroup>
-                        <optgroup label="Nordeste">
+                            </optgroup>
+                            <optgroup label="Nordeste">
                                 <option value="CE">Ceará</option>
                                 <option value="AL">Alagoas</option>
                                 <option value="BA">Bahia</option>
@@ -81,8 +92,8 @@
                                 <option value="PB">Paraíba</option>
                                 <option value="PE">Pernambuco</option>
                                 <option value="SE">Sergipe</option>
-                        </optgroup>
-                        <optgroup label="Norte">
+                            </optgroup>
+                            <optgroup label="Norte">
                                 <option value="AM">Amazonas</option>
                                 <option value="AC">Acre</option>
                                 <option value="RO">Rondônia</option>
@@ -90,21 +101,26 @@
                                 <option value="AP">Amapá</option>
                                 <option value="PA">Pará</option>
                                 <option value="TO">Tocantins</option>
-                        </optgroup>
-                    </select></p>
-                <p><label for="iCity">Cidade: </label><input type="text" name="nCity" id="iCity" maxlength="40" size="20" value="Cornélio" list="cidades" disabled/></p>
-                <datalist id="city">
-                    <option value="São Paulo"></option>
-                    <option value="Cornélio Procópio"></option>
-                    <option value="Curitiba"></option>
-                </datalist>
-            </fieldset>
-
-            <fieldset id="iComment">
-                    <legend>Anotações</legend>
-                    <p><label for="iMsg">Comentário: </label><textarea name="nMsg" id="iMsg" cols="35" rows="5" disabled>ALGUM COMENTÁRIO</textarea></p>
+                            </optgroup>
+                        </select>
+                    </p>
+                    <p><label for="iCity">Cidade:</label><br />
+                        <input type="text" name="nCity" id="iCity" maxlength="40" size="35" value="Cornélio" 
+                        list="cidades" disabled />
+                    </p>
+                    <datalist id="city">
+                        <option value="São Paulo"></option>
+                        <option value="Cornélio Procópio"></option>
+                        <option value="Curitiba"></option>
+                    </datalist>
                 </fieldset>
-</div>
-</body> 
 
+                <fieldset id="iComment">
+                    <legend>Anotações</legend>
+                    <p><label for="iMsg">Comentário: </label><br />
+                        <textarea name="nMsg" id="iMsg" cols="35" rows="5" disabled>ALGUM COMENTÁRIO</textarea>
+                    </p>
+                </fieldset>
+        </div>
+    </body>
 </html>
