--- a/Desafio HTML5/add.html
+++ b/Desafio HTML5/add.html
@@ -25,7 +25,7 @@
             <fieldset id="iPerson">
                 <legend>Dados Pessoais</legend>
                 <p><img id="cont-img" src="_img/cont-logo.png">
-                    <img id="add-img" src="_img/add.png"/>
+                    <img id="add-img" src="_img/cam-icon.png"/>
                 </p>
                 <p><label for="iName">Nome:</label><br />
                     <input type="text" name="nNome" id="iNome" size="35" maxlength="35" />
