--- a/Desafio HTML5/add.html
+++ b/Desafio HTML5/add.html
@@ -34,8 +34,10 @@
                     <input type="text" name="nSurname" id="iSurname" size="35" maxlength="35" />
                 </p>
                 <p>Sexo:<br /><br />
-                    <input type="radio" name="nGenre" id="iMale" /><label for="iMale">Masculino</label><br />
-                    <input type="radio" name="nGenre" id="iFemale" /><label for="iFemale">Feminino</label>
+                    <input type="radio" name="nGenre" id="iMale" />
+                    <label for="iMale">Masculino</label><br />
+                    <input type="radio" name="nGenre" id="iFemale" />
+                    <label for="iFemale">Feminino</label>
                 </p>
                 <p><label for="iData">Data de Nascimento:</label><br />
                     <input type="date" name="nData" id="iData" />
@@ -44,7 +46,7 @@
                     <input type="email" name="nEmail" id="iEmail" size="35" maxlength="40" />
                 </p>
                 <p><label for="iPhone">Telefone:</label><br />
-                    <input type="text" name="nPhone" id="iPhone" size="35" maxlength="40" />
+                    <input type="text" name="nPhone" id="iPhone" size="35" maxlength="40">
                 </p>
             </fieldset>
 
