--- a/Desafio HTML5/contact.html
+++ b/Desafio HTML5/contact.html
@@ -1,126 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>AGENDAKI</title>
-        <link rel="stylesheet" type="text/css" href="_css/style.css" />
-        <link rel="stylesheet" type="text/css" href="_css/form.css" />
-        <link rel="stylesheet" type="text/css" href="_css/cont.css" />
-    </head>
 
-    <body>
-        <header>
-            <h1><a href="index.html">AGENDAKI</a></h1>
-        </header>
-        <div>
-            <nav id="org">
-                <h2>Contatos:</h2>
-                <ul>
-                    <li class="list" id="all-list"><a href="index.html">Todos</a></li>
-                    <li class="list" id="fav-list"><a href="fav.html">Favoritos</a></li>
-                    <li class="list" id="rm-list">Deletar</li>
-                    <li class="list" id="edit-list"><a href="edit.html">Editar</a></li>
-                </ul>
-            </nav>
-            <form method="POST" id="form-add" action="mailto:lucas.tarumoto@forlogic.net">
-                <fieldset id="iPerson">
-                    <legend>Dados Pessoais</legend>
-                    <p><label for="iName">Nome:</label><br />
-                        <input type="text" name="nNome" id="iNome" size="35" maxlength="35" value="Pessoa 1" 
-                        disabled />
-                    </p>
-                    <p><label for="iSurname">Sobrenome:</label><br />
-                        <input type="text" name="nSurname" id="iSurname" size="35" maxlength="35"
-                         value="Sobrenome 1" disabled />
-                    </p>
-                    <p><label for="iEmail">E-mail:</label><br />
-                        <input type="email" name="nEmail" id="iEmail" size="35" maxlength="40" 
-                        value="pessoa1@email.com" disabled />
-                    </p>
-                    <p>Sexo:<br /><br />
-                        <input type="radio" name="nGenre" id="iMale" checked disabled />
-                        <label for="iMale">Masculino</label><br />
-                        <input type="radio" name="nGenre" id="iFemale" checked />
-                        <label for="iFemale">Feminino</label>
-                    </p>
-                    <p><label for="iData">Data de Nascimento:</label><br />
-                        <input type="date" name="nData" id="iData" value="1996-03-06" disabled />
-                    </p>
-                    <p>Foto:<br />
-                        <img id="cont-img" src="_img/cont-logo.png">
-                    </p>
-                </fieldset>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AGENDAKI</title>
+    <link rel="stylesheet" type="text/css" href="_css/style.css" />
+    <link rel="stylesheet" type="text/css" href="_css/form.css" />
+    <link rel="stylesheet" type="text/css" href="_css/cont.css" />
+</head>
 
-                <fieldset id="iAddress">
-                    <legend>Endereço</legend>
-                    <p><label for="iComp">Empresa:</label><br />
-                        <input type="text" name="nComp" id="iComp" size="35" max="50" value="Company A" disabled />
-                    </p>
-                    <p><label for="iStreet">Logradouro:</label><br />
-                        <input type="text" name="nStreet" id="iStreet" size="35" max="80" value="Rua dos Bobos"
-                         disabled />
-                    </p>
-                    <p><label for="iNum">Número:</label><br />
-                        <input type="number" name="nNum" id="iNum" min="0" max="99999" value="0" disabled />
-                    </p>
-                    <p><label for="iState">Estado:</label><br />
-                        <select name="nState" id="iState" disabled>
-                            <optgroup label="Regiao Sul">
-                                <option value="SC">Santa Catarina</option>
-                                <option value="RS">Rio Grande do Sul</option>
-                                <option value="PR">Paraná</option>
-                            </optgroup>
-                            <optgroup label="Sudeste">
-                                <option value="SP">São Paulo</option>
-                                <option value="RJ">Rio de Janeiro</option>
-                                <option value="ES">Espírito Santo</option>
-                                <option value="MG">Minas Gerais</option>
-                            </optgroup>
-                            <optgroup label="Centro-Oeste">
-                                <option value="GO">Goiás</option>
-                                <option value="MT">Mato Grosso</option>
-                                <option value="MS">Mato Grosso do Sul</option>
-                            </optgroup>
-                            <optgroup label="Nordeste">
-                                <option value="CE">Ceará</option>
-                                <option value="AL">Alagoas</option>
-                                <option value="BA">Bahia</option>
-                                <option value="MA">Maranhão</option>
-                                <option value="PI">Piauí</option>
-                                <option value="RN">Rio Grande do Norte</option>
-                                <option value="PB">Paraíba</option>
-                                <option value="PE">Pernambuco</option>
-                                <option value="SE">Sergipe</option>
-                            </optgroup>
-                            <optgroup label="Norte">
-                                <option value="AM">Amazonas</option>
-                                <option value="AC">Acre</option>
-                                <option value="RO">Rondônia</option>
-                                <option value="RR">Roraima</option>
-                                <option value="AP">Amapá</option>
-                                <option value="PA">Pará</option>
-                                <option value="TO">Tocantins</option>
-                            </optgroup>
-                        </select>
-                    </p>
-                    <p><label for="iCity">Cidade:</label><br />
-                        <input type="text" name="nCity" id="iCity" maxlength="40" size="35" value="Cornélio" 
-                        list="cidades" disabled />
-                    </p>
-                    <datalist id="city">
-                        <option value="São Paulo"></option>
-                        <option value="Cornélio Procópio"></option>
-                        <option value="Curitiba"></option>
-                    </datalist>
-                </fieldset>
+<body>
+    <header>
+        <h1><a href="index.html">AGENDAKI</a></h1>
+    </header>
+    <div id="div">
+        <nav id="org">
+            <h2>Contatos:</h2>
+            <ul>
+                <li class="list" id="all-list"><a href="index.html">Todos</a></li>
+                <li class="list" id="fav-list"><a href="fav.html">Favoritos</a></li>
+                <li class="list" id="rm-list">Deletar</li>
+                <li class="list" id="edit-list"><a href="edit.html">Editar</a></li>
+            </ul>
+        </nav>
+        <div class="div-top">
+            <div class="div-mid">
+                <p><img id="cont-img" src="_img/cont-logo.png"></p>
+                
+            </div>
 
-                <fieldset id="iComment">
-                    <legend>Anotações</legend>
-                    <p><label for="iMsg">Comentário: </label><br />
-                        <textarea name="nMsg" id="iMsg" cols="35" rows="5" disabled>ALGUM COMENTÁRIO</textarea>
-                    </p>
-                </fieldset>
+            <div class="div-mid">
+                    <p>Pessoa1 Sobrenome1</p>
+                    <p>pessoa@forlogic.net</p>
+                    <p>Masculino</p>
+                    <p><label for="iData">03/06/1996 </p>
+            </div>
         </div>
-    </body>
+        <div class="div-top" id="div-end">
+            <div class="div-mid">
+            <p>Company A</p>
+            <p><img src="_img/local-icon.png"/>  Rua dos Bobos n° 0</p>
+            <p>Cornélio Procópio - PR</p>
+            <p><img src="_img/phone-icon.png"/>  (xx)xxxx-xxxx</p>
+        </div>
+        </div>
+        <div class="div-foot">
+            <p>Comentário:</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+                aliquip ex ea commodo consequat.
+            </p>
+        </div>
+</body>
+
 </html>
