--- a/Desafio HTML5/contact.html
+++ b/Desafio HTML5/contact.html
@@ -14,44 +14,52 @@
     <header>
         <h1><a href="index.html">AGENDAKI</a></h1>
     </header>
-    <div id="div">
-        <nav id="org">
-            <h2>Contatos:</h2>
-            <ul>
-                <li class="list" id="all-list"><a href="index.html">Todos</a></li>
-                <li class="list" id="fav-list"><a href="fav.html">Favoritos</a></li>
-                <li class="list" id="rm-list">Deletar</li>
-                <li class="list" id="edit-list"><a href="edit.html">Editar</a></li>
-            </ul>
-        </nav>
-        <div class="div-top">
-            <div class="div-mid">
-                <p><img id="cont-img" src="_img/cont-logo.png"></p>
-                
+        <div class="div">
+            <nav id="org">
+                <h2>Contatos:</h2>
+                <ul>
+                    <li class="list" id="all-list"><a href="index.html">Todos</a></li>
+                    <li class="list" id="fav-list"><a href="fav.html">Favoritos <img src="_img/star-fav-icon.png" /></a>
+                    </li>
+                    <li class="list" id="rm-list">Deletar <img src="_img/x-icon.png" /></a></li>
+                    <li class="list" id="edit-list"><a href="edit.html">Editar <img src="_img/pencil-icon.png" /></a></li>
+                </ul>
+            </nav>
+            <div class="div-top">
+                <div class="div-mid">
+                    <p><img id="cont-img" src="_img/cont-logo.png"></p>
+                </div>
+                <div class="div-mid">
+                    <p>Pessoa1 Sobrenome1</p>
+                    <p>Masculino</p>
+                    <p><img src="_img/calendar-icon.png" /> 03/06/1996 </p>
+                    <p><img src="_img/mail-icon.png" /> pessoa@forlogic.net</p>
+                </div>
             </div>
 
-            <div class="div-mid">
-                    <p>Pessoa1 Sobrenome1</p>
-                    <p>pessoa@forlogic.net</p>
-                    <p>Masculino</p>
-                    <p><label for="iData">03/06/1996 </p>
+            <div class="div-top" id="div-end">
+                <div class="div-mid">
+                    <p><img src="_img/building-icon.png" /> Company A</p>
+                    <p><img src="_img/local-icon.png" /> Rua dos Bobos n° 0</p>
+                    <p>Cornélio Procópio - PR</p>
+                    <p><img src="_img/phone-icon.png" /> (xx)xxxx-xxxx</p>
+                </div>
+            </div>
+
+            <div class="div-foot">
+                <p>Comentário:</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </p>
             </div>
         </div>
-        <div class="div-top" id="div-end">
-            <div class="div-mid">
-            <p>Company A</p>
-            <p><img src="_img/local-icon.png"/>  Rua dos Bobos n° 0</p>
-            <p>Cornélio Procópio - PR</p>
-            <p><img src="_img/phone-icon.png"/>  (xx)xxxx-xxxx</p>
-        </div>
-        </div>
-        <div class="div-foot">
-            <p>Comentário:</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-                aliquip ex ea commodo consequat.
+        
+        <footer class="rodape">
+            <p>Copyright &copy; 2019 - by Anonymous<br />
+                <a href="" target="_blank">Facebook</a> | <a href="" target="_blank">Twitter</a>
             </p>
-        </div>
-</body>
+        </footer>
+    </body>
 
 </html>
