--- a/Desafio HTML5/index.html
+++ b/Desafio HTML5/index.html
@@ -12,14 +12,14 @@
     <header>
         <h1><a href="index.html">AGENDAKI</a></h1>
     </header>
-    <div>
+    <div class="div">
         <nav id="org">
             <h2>Contatos:</h2>
             <ul>
                 <li class="list" id="all-list"><a href="index.html">Todos</a></li>
-                <li class="list" id="fav-list"><a href="fav.html">Favoritos</a></li>
-                <li class="list" id="add-list"><a href="add.html">Adicionar</a></li>
-                <li class="list" id="rm-list">Deletar</li>
+                <li class="list" id="fav-list"><a href="fav.html">Favoritos <img src="_img/star-fav-icon.png" /></a>
+                </li>
+                <li class="list" id="rm-list">Deletar <img src="_img/x-icon.png" /></a></li>
             </ul>
         </nav>
         <form class="search">
@@ -220,6 +220,11 @@
             <input id="bMore" type="button" value="Mais..." />
         </section>
     </div>
+    <footer class="rodape">
+        <p>Copyright &copy; 2019 - by Anonymous<br />
+            <a href="" target="_blank">Facebook</a> | <a href="" target="_blank">Twitter</a>
+        </p>
+    </footer>
 </body>
 
 </html>
